@@ -1,3 +1,7 @@
+12 March 2007
+
+* Section headings are now numbered in MANUAL.
+
 11 March 2007
 
 * You can't use a va_list twice even when it's passed in as an argument. Duh.
@@ -118,4 +122,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.34 2007-03-11 22:56:51 nicm Exp $
+$Id: CHANGES,v 1.35 2007-03-12 10:24:18 nicm Exp $
